# mosais

./: .gitignore  CMakeLists.txt  buildrun.sh
inc/: mosais.General.hpp  mosais.System.hpp  mosais.Types.hpp  mosais.cognitive.Manager.hpp  mosais.memory.Manager.hpp  mosais.nlp.Dictionary.hpp  mosais.nlp.DictionaryManager.hpp  mosais.nlp.Manager.hpp
src/: main.cpp  mosais.System.cpp  mosais.cognitive.Manager.cpp  mosais.memory.Manager.cpp  mosais.nlp.Dictionary.cpp  mosais.nlp.DictionaryManager.cpp  mosais.nlp.Manager.cpp
