CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(VERSION_LOW 1)
SET(VERSION_UP 0)

SET(PROJ_NAME mosais)
SET(EXEC_NAME "${PROJ_NAME}")

PROJECT(${PROJ_NAME})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/inc)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

FILE(GLOB_RECURSE HDRS "${PROJECT_SOURCE_DIR}/inc/*.hpp" "${PROJECT_SOURCE_DIR}/inc/*.h")
FILE(GLOB_RECURSE SRCS "${PROJECT_SOURCE_DIR}/src/*.cpp" "${PROJECT_SOURCE_DIR}/src/*.c")

SET(EXECUTABLE_NAME ${EXEC_NAME})
ADD_EXECUTABLE(${EXECUTABLE_NAME} ${SRCS} ${HDRS})
SET(EXECUTABLE_OUTPUT_PATH  ${PROJECT_SOURCE_DIR}/bin)

SET_TARGET_PROPERTIES(${EXECUTABLE_NAME} PROPERTIES DEBUG_POSTFIX _d)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmk" ${CMAKE_MODULE_PATH})

set(Boost_USE_STATIC_LIBS        OFF)
set(Boost_USE_MULTITHREADED      ON)
set(Boost_USE_STATIC_RUNTIME     OFF)
set(BOOST_ALL_DYN_LINK           ON)   # force dynamic linking for all libraries
FIND_PACKAGE(Boost 1.54 COMPONENTS system filesystem program_options REQUIRED)
IF(Boost_FOUND)
	INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
	TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${Boost_LIBRARIES})
ENDIF()

FIND_PACKAGE(Threads)
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${CMAKE_THREAD_LIBS_INIT})
